# Lab2Cole

./: .gitignore
.github/workflows/: cmake.yml
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  Methods.cpp  Methods.h
src/test_lib/: CMakeLists.txt  test.cpp
